# Tractus.Encoders

./: LICENSE  README.md  Tractus.Encoders.csproj  Tractus.Encoders.sln
AMF/: AmfNativeEncoder.cs
Apple/: VtH264Encoder.cs
Intel/: QsvNativeEncoder.cs
Nvidia/: CUresult.cs  CudaNative.cs  NvEncDelegateWrapper.cs  NvencEncoderWrapper.cs  NvencNativeApi.cs  NvencPinvoke.cs  NvidiaNativeLibraryResolver.cs  RequestedCodec.cs
native/Tractus.AmfShim/: CMakeLists.txt  README.md  TractusAmfShim.cpp  TractusAmfShim.h
